--- a/product-item.html
+++ b/product-item.html
@@ -99,66 +99,17 @@
 						<li><a href="#">Кондитерські вироби</a></li>
 					</ul>
 				</aside>
-				<section id="content-info-holder">
-					<h1>Продукти</h1>
+				<section id="content-info-holder" class="product-holder">
+					<h1>Віденський пиріг</h1>
 					<span class="sprtr-h"></span>
-					<div class="grid">
-						<div class="row">
-							<article class="col product">
-								<figure>
-									<a href="product-item.html">
-										<img src="build/images/products/biscuit-chocolate/apricot-pie.jpg" alt="Віденський пиріг | ПАТ «КОНДИТЕРСЬКА ФАБРИКА «ХАРКІВ’ЯНКА»">
-									</a>
-								</figure>
-								<h2>Віденський пиріг</h2>
-								<div class="price-weight-holder">
-									<span class="weight">55г</span>
-									<span class="price">12,50 грн.</span>
-								</div>
-								<div class="description">
-									<p>Пирог из классического песочного теста с начинкой из абрикосового джема.</p>
-								</div>
-								<div class="btn-small">
-									<a href="product-item.html">Детальніше</a>
-								</div>
-							</article>
-							<article class="col product">
-								<figure>
-									<a href="product-item.html">
-										<img src="build/images/products/biscuit-chocolate/apricot-pie.jpg" alt="Віденський пиріг | ПАТ «КОНДИТЕРСЬКА ФАБРИКА «ХАРКІВ’ЯНКА»">
-									</a>
-								</figure>
-								<h2>Віденський пиріг</h2>
-								<div class="price-weight-holder">
-									<span class="weight">55г</span>
-									<span class="price">12,50 грн.</span>
-								</div>
-								<div class="description">
-									<p>Пирог из классического песочного теста с начинкой из абрикосового джема.</p>
-								</div>
-								<div class="btn-small">
-									<a href="product-item.html">Детальніше</a>
-								</div>
-							</article>
-							<article class="col product">
-								<figure>
-									<a href="product-item.html">
-										<img src="build/images/products/biscuit-chocolate/apricot-pie.jpg" alt="Віденський пиріг | ПАТ «КОНДИТЕРСЬКА ФАБРИКА «ХАРКІВ’ЯНКА»">
-									</a>
-								</figure>
-								<h2>Віденський пиріг</h2>
-								<div class="price-weight-holder">
-									<span class="weight">55г</span>
-									<span class="price">12,50 грн.</span>
-								</div>
-								<div class="description">
-									<p>Пирог из классического песочного теста с начинкой из абрикосового джема.</p>
-								</div>
-								<div class="btn-small">
-									<a href="product-item.html">Детальніше</a>
-								</div>
-							</article>
+					<div class="carousel-holder">
+						<div class="carousel">
+							<div class="slide active">1</div>
+							<div class="slide">2</div>
+							<div class="slide">3</div>
 						</div>
+						<span class="arrow left">to left</span>
+						<span class="arrow right">to right</span>
 					</div>
 				</section>
 			</div>
