content change, product-item, contacts

--- a/contacts-school.html
+++ b/contacts-school.html
@@ -93,108 +93,27 @@
 				<aside id="navigation-holder">
 					<ul>
 						<li><a href="contacts.html">Головний офіс</a></li>
-						<li class="active"><a href="contacts-school.html">Розташування у школі</a></li>
-						<li><a href="contacts-supplier.html">Контакти для постачальників</a></li>
+						<li class="active"><a href="contacts-school.html">Для розташування автоматів у школі</a></li>
+						<li><a href="contacts-supplier.html">Для постачальників</a></li>
 					</ul>
 				</aside>
 				<section id="content-info-holder">
-					<h2>Київська область</h2>
+					<h1>Розташування автоматів у школі</h1>
 					<span class="sprtr-h"></span>
 					<div class="grid staff-holder">
 						<div class="row">
 							<div class="col">
-								<h2>Вероніка</h2>
-								<span>керуюча</span>
+								<h2>Сірко Вероніка Юріївна</h2>
+								<span class="role">керівник</span>
 								<span class="sprtr-h"></span>
 								<ul>
 									<li>
 										<span class="hr-phone"></span>
-										<a href="#">+38 (044) 999 9999</a>
+										<a href="tel:+380504137194">+38 (050) 413 7194</a>
 									</li>
 									<li>
 										<span class="hr-email"></span>
-										<a href="#">v.sirko@kdz.com.ua</a>
-									</li>
-								</ul>
-							</div>
-							<div class="col">
-								<h2>Ірина</h2>
-								<span>менеджер</span>
-								<span class="sprtr-h"></span>
-								<ul>
-									<li>
-										<span class="hr-phone"></span>
-										<a href="#">+38 (044) 999 9999</a>
-									</li>
-									<li>
-										<span class="hr-email"></span>
-										<a href="#">irina@kdz.com.ua</a>
-									</li>
-								</ul>
-							</div>
-							<div class="col">
-								<h2>Наталія</h2>
-								<span>аккаунт-менеджер</span>
-								<span class="sprtr-h"></span>
-								<ul>
-									<li>
-										<span class="hr-phone"></span>
-										<a href="#">+38 (044) 999 9999</a>
-									</li>
-									<li>
-										<span class="hr-email"></span>
-										<a href="#">natali@kdz.com.ua</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<h2>Черкаська область</h2>
-					<span class="sprtr-h"></span>
-					<div class="grid staff-holder">
-						<div class="row">
-							<div class="col">
-								<h2>Вероніка</h2>
-								<span>керуюча</span>
-								<span class="sprtr-h"></span>
-								<ul>
-									<li>
-										<span class="hr-phone"></span>
-										<a href="#">+38 (044) 999 9999</a>
-									</li>
-									<li>
-										<span class="hr-email"></span>
-										<a href="#">v.sirko@kdz.com.ua</a>
-									</li>
-								</ul>
-							</div>
-							<div class="col">
-								<h2>Ірина</h2>
-								<span>менеджер</span>
-								<span class="sprtr-h"></span>
-								<ul>
-									<li>
-										<span class="hr-phone"></span>
-										<a href="#">+38 (044) 999 9999</a>
-									</li>
-									<li>
-										<span class="hr-email"></span>
-										<a href="#">irina@kdz.com.ua</a>
-									</li>
-								</ul>
-							</div>
-							<div class="col">
-								<h2>Наталія</h2>
-								<span>аккаунт-менеджер</span>
-								<span class="sprtr-h"></span>
-								<ul>
-									<li>
-										<span class="hr-phone"></span>
-										<a href="#">+38 (044) 999 9999</a>
-									</li>
-									<li>
-										<span class="hr-email"></span>
-										<a href="#">natali@kdz.com.ua</a>
+										<a href="mailto:v.sirko@kdz.com.ua">v.sirko@kdz.com.ua</a>
 									</li>
 								</ul>
 							</div>
