--- a/contacts-supplier.html
+++ b/contacts-supplier.html
@@ -93,17 +93,18 @@
 				<aside id="navigation-holder">
 					<ul>
 						<li><a href="contacts.html">Головний офіс</a></li>
-						<li><a href="contacts-school.html">Розташування у школі</a></li>
-						<li class="active"><a href="contacts-supplier.html">Контакти для постачальників</a></li>
+						<li><a href="contacts-school.html">Для розташування автоматів у школі</a></li>
+						<li class="active"><a href="contacts-supplier.html">Для постачальників</a></li>
 					</ul>
 				</aside>
 				<section id="content-info-holder">
-					<h2>Усі регіони</h2>
+					<h1>Для постачальників</h1>
 					<span class="sprtr-h"></span>
 					<div class="grid staff-holder">
 						<div class="row">
 							<div class="col">
-								<h2>Андрій</h2>
+								<h2>Кирилюк Наталія Олегівна</h2>
+								<span class="role">начальник відділу логістики</span>
 								<span class="sprtr-h"></span>
 								<ul>
 									<li>
@@ -112,7 +113,7 @@
 									</li>
 									<li>
 										<span class="hr-email"></span>
-										<a href="mailto:a.snezhko@kdz.com.ua">a.snezhko@kdz.com.ua</a>
+										<a href="mailto:n.kirilyuk@kdz.com.ua">n.kirilyuk@kdz.com.ua</a>
 									</li>
 								</ul>
 							</div>
