--- a/contacts.html
+++ b/contacts.html
@@ -93,39 +93,41 @@
 				<aside id="navigation-holder">
 					<ul>
 						<li class="active"><a href="contacts.html">Головний офіс</a></li>
-						<li><a href="contacts-school.html">Розташування у школі</a></li>
-						<li><a href="contacts-supplier.html">Контакти для постачальників</a></li>
+						<li><a href="contacts-school.html">Для розташування автоматів у школі</a></li>
+						<li><a href="contacts-supplier.html">Для постачальників</a></li>
 					</ul>
 				</aside>
 				<section id="content-info-holder">
+					<h1>Головний офіс</h1>
+					<span class="sprtr-h"></span>
 					<div class="grid">
 						<div class="row">
 							<div class="col">
-								<h3>Графік роботи</h3>
+								<h2>Графік роботи</h2>
 								<span class="sprtr-h"></span>
 								<span class="icon hr-shedule"></span>
 								<div class="item">
-									<p><span>пн-пт</span> 9:00 - 18:00</p>
+									<p><span>Пн.-Пт.</span> з 9:00 до 18:00</p>
 								</div>
 							</div>
 							<div class="col">
-								<h3>Контакта інформація</h3>
+								<h2>Контакта інформація</h2>
 								<span class="sprtr-h"></span>
 								<span class="icon hr-phone"></span>
 								<div class="item">
-									<a href="#">+38 (044) 999 9999</a>
+									<a href="tel:+380442353842">+38 (044) 235-3842</a>
 								</div>
 								<span class="icon hr-email"></span>
 								<div class="item">
-									<a href="#">info@kdz.com.ua</a>
+									<a href="mailto:info@kdz.com.ua">info@kdz.com.ua</a>
 								</div>
 							</div>
 							<div class="col">
-								<h3>Адреса</h3>
+								<h2>Для листування</h2>
 								<span class="sprtr-h"></span>
-								<span class="icon hr-pin"></span>
+								<span class="icon hr-email"></span>
 								<div class="item">
-									<p>03002, м. Київ, вул. Ярославів Вал 13/2</p>
+									<p>01054, м. Київ-54, А/С 12</p>
 								</div>
 							</div>
 						</div>
