--- a/product-item.html
+++ b/product-item.html
@@ -13,7 +13,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-title" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"
-	<meta http-equiv="cleartype" content="on">-->
+	<meta http-equiv="cleartype" content="on"-->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 	<meta name="Description" content="Описание необходимых мета-тегов." />
 	<!--meta name="msapplication-TileImage" content="assets/images/favicons/ms/144x144.png">
@@ -100,16 +100,40 @@
 					</ul>
 				</aside>
 				<section id="content-info-holder" class="product-holder">
-					<h1>Віденський пиріг</h1>
-					<span class="sprtr-h"></span>
 					<div class="carousel-holder">
 						<div class="carousel">
-							<div class="slide active">1</div>
-							<div class="slide">2</div>
-							<div class="slide">3</div>
+							<div class="slide">
+								<figure>
+									<img src="build/images/products/biscuit-chocolate/apricot-pie.jpg" alt="">
+								</figure>
+							</div>
+							<div class="slide">
+								<figure>
+									<img src="build/images/products/biscuit-chocolate/apricot-pie.jpg" alt="">
+								</figure>
+							</div>
+							<div class="slide">
+								<figure>
+									<img src="build/images/products/biscuit-chocolate/apricot-pie.jpg" alt="">
+								</figure>
+							</div>
 						</div>
-						<span class="arrow left">to left</span>
-						<span class="arrow right">to right</span>
+						<span class="arrow left hr-left-arrow"></span>
+						<span class="arrow right hr-right-arrow"></span>
+						<div class="dots-holder">
+							<span class="dot active"></span>
+							<span class="dot"></span>
+							<span class="dot"></span>
+						</div>
+					</div>
+					<div class="info-holder">
+						<h1>Віденський пиріг</h1>
+						<span class="sprtr-h"></span>
+						<p>Пиріг з класичного пісочного тіста з начинкою з абрикосового джему.</p>
+						<p><span>Состав:</span> джем абрикосовий, борошно пшеничне, в/г, маргарин, цукор, яйце куряче, глюкозо-фруктозний сироп, молоко сухе незбиране, ароматизатори, лецитин, сіль, розпушувачі, барвник натуральний.</p>
+						<p><span>Масса нето:</span>55 г.</p>
+						<p><span>Термін зберігання:</span>210 діб</p>
+						<p class="price"><span>Ціна: </span>4,49 грн.</p>
 					</div>
 				</section>
 			</div>
