--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Дорога Здоров'я</title>
 	<meta charset="UTF-8">
-	<!--meta name="HandheldFriendly" content="True">
+	<meta name="HandheldFriendly" content="True">
 	<meta name="MobileOptimized" content="320">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
@@ -13,7 +13,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-title" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"
-	<meta http-equiv="cleartype" content="on">-->
+	<meta http-equiv="cleartype" content="on">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 	<meta name="Description" content="Описание необходимых мета-тегов." />
 	<!--meta name="msapplication-TileImage" content="assets/images/favicons/ms/144x144.png">
@@ -73,6 +73,9 @@
 					</ul>
 				</div>
 			</div>
+			<div id="toggle-menu">
+				<span>Меню</span>
+			</div>
 			<div id="menu-holder">
 				<div class="inner">
 					<nav class="menu">
@@ -80,7 +83,7 @@
 							<li class="active"><a href="index.html">Головна</a></li>
 							<li><a href="project.html">Наш проект</a></li>
 							<li><a href="about.html">Про компанію</a></li>
-							<li><a href="suppliers.html">Виробники</a></li>
+							<li><a href="suppliers.html">Наші партнери</a></li>
 							<li><a href="products.html">Продукти</a></li>
 							<li><a href="contacts.html">Контакти</a></li>
 						</ul>
@@ -191,6 +194,13 @@
 						<li>
 							<figure>
 								<a href="#">
+									<img src="build/images/suppliers/sladkiy-myr.png" alt="Солодкий світ">
+								</a>
+							</figure>
+						</li>
+						<li>
+							<figure>
+								<a href="#">
 									<img src="build/images/suppliers/tekmar.png" alt="Текмар">
 								</a>
 							</figure>
@@ -199,13 +209,6 @@
 							<figure>
 								<a href="#">
 									<img src="build/images/suppliers/ramonka.png" alt="Рамонка">
-								</a>
-							</figure>
-						</li>
-						<li>
-							<figure>
-								<a href="#">
-									<img src="build/images/suppliers/arsenal.png" alt="Арсенал-пак">
 								</a>
 							</figure>
 						</li>
