--- a/product-item.html
+++ b/product-item.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Дорога Здоров'я</title>
 	<meta charset="UTF-8">
-	<!--meta name="HandheldFriendly" content="True">
+	<meta name="HandheldFriendly" content="True">
 	<meta name="MobileOptimized" content="320">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
@@ -13,7 +13,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-title" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"
-	<meta http-equiv="cleartype" content="on"-->
+	<meta http-equiv="cleartype" content="on">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 	<meta name="Description" content="Описание необходимых мета-тегов." />
 	<!--meta name="msapplication-TileImage" content="assets/images/favicons/ms/144x144.png">
@@ -73,6 +73,9 @@
 					</ul>
 				</div>
 			</div>
+			<div id="toggle-menu">
+				<span>Меню</span>
+			</div>
 			<div id="menu-holder">
 				<div class="inner">
 					<nav class="menu">
@@ -88,7 +91,7 @@
 				</div>
 			</div>
 		</header>
-		<main id="content" class="sticky">
+		<main id="content" class="sticky product-holder">
 			<div class="outer inside">
 				<aside id="navigation-holder">
 					<ul>
@@ -99,7 +102,7 @@
 						<li><a href="#">Кондитерські вироби</a></li>
 					</ul>
 				</aside>
-				<section id="content-info-holder" class="product-holder">
+				<section id="content-info-holder">
 					<div class="carousel-holder">
 						<div class="carousel">
 							<div class="slide">
