--- a/project-get-card.html
+++ b/project-get-card.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Дорога Здоров'я</title>
 	<meta charset="UTF-8">
-	<!--meta name="HandheldFriendly" content="True">
+	<meta name="HandheldFriendly" content="True">
 	<meta name="MobileOptimized" content="320">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
@@ -13,7 +13,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-title" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"
-	<meta http-equiv="cleartype" content="on">-->
+	<meta http-equiv="cleartype" content="on">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 	<meta name="Description" content="Описание необходимых мета-тегов." />
 	<!--meta name="msapplication-TileImage" content="assets/images/favicons/ms/144x144.png">
@@ -73,6 +73,9 @@
 					</ul>
 				</div>
 			</div>
+			<div id="toggle-menu">
+				<span>Меню</span>
+			</div>
 			<div id="menu-holder">
 				<div class="inner">
 					<nav class="menu">
@@ -93,7 +96,6 @@
 				<aside id="navigation-holder">
 					<ul>
 						<li><a href="project.html">Наш проект</a></li>
-						<li><a href="project-advantage.html">Переваги проекту</a></li>
 						<li class="active"><a href="project-get-card.html">Як отримати картку або браслет</a></li>
 						<li><a href="project-card-refill.html">Як поповнити картку або браслет</a></li>
 						<li><a href="project-how-to-use-vending-machine.html">Як користуватися вендінговим автоматов</a></li>
