--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Дорога Здоров'я</title>
 	<meta charset="UTF-8">
-	<!--meta name="HandheldFriendly" content="True">
+	<meta name="HandheldFriendly" content="True">
 	<meta name="MobileOptimized" content="320">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
@@ -13,7 +13,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-title" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"
-	<meta http-equiv="cleartype" content="on">-->
+	<meta http-equiv="cleartype" content="on">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 	<meta name="Description" content="Описание необходимых мета-тегов." />
 	<!--meta name="msapplication-TileImage" content="assets/images/favicons/ms/144x144.png">
@@ -73,6 +73,9 @@
 					</ul>
 				</div>
 			</div>
+			<div id="toggle-menu">
+				<span>Меню</span>
+			</div>
 			<div id="menu-holder">
 				<div class="inner">
 					<nav class="menu">
@@ -93,7 +96,6 @@
 				<aside id="navigation-holder">
 					<ul>
 						<li class="active"><a href="project.html">Наш проект</a></li>
-						<li><a href="project-advantage.html">Переваги проекту</a></li>
 						<li><a href="project-get-card.html">Як отримати картку або браслет</a></li>
 						<li><a href="project-card-refill.html">Як поповнити картку або браслет</a></li>
 						<li><a href="project-how-to-use-vending-machine.html">Як користуватися вендінговим автоматов</a></li>
@@ -153,7 +155,6 @@
 					<p>Ті продукти, які дитина зможе самостійно отримувати у вендінговому (торговельному) автоматі, ретельно підібрані провідними дитячими дієтологами та перевірені фахівцями Інституту гігієни та медичної екології з урахуванням потреб дитячого організму.</p>
 					<p>Пам’ятайте! Невідповідність продуктів нормам дитячого харчування, може призвести до появи ожиріння, захворювання судин, хвороб шлунково-кишкового тракту та ін...</p>
 					<p>У вендінгових автоматах компанії «Дорога Здоров'я» завжди тільки свіжі продукти від сертифікованих державою виробників</p>
-
 					<div class="movie-holder">
 						<div class="inner">
 							<iframe src="https://www.youtube.com/embed/b_eY9fmbUAM" frameborder="0" allowfullscreen></iframe>
@@ -177,7 +178,26 @@
 						</ul>
 					</div>
 					<p><span class="attention">Звертаємо Вашу увагу!</span> Ви більше не потрібно видавати дитині кишенькові гроші, які можуть бути витрачені на чіпси, газовану солодку воду, цигарки або алкоголь. Гроші на особистому рахунку дитиною будуть витрачатись виключно на придбання продуктів харчування з вендінгового автомату, встановленого у школі.</p>
-
+					<h2>Переваги нашого проекту</h2>
+					<div class="list-holder">
+						<ul>
+							<li>
+								<p>Дитина не зможе витрати суму, вищу за встановлений батьками ліміт.</p>
+							</li>
+							<li>
+								<p>Дитина не зможе використати браслет або картку ніде, окрім як у вендінговому автоматі. Це означає, що вона не зможе купити чіпси, газовані напої, алкоголь або цигарки.</p>
+							</li>
+							<li>
+								<p>Гроші, нараховані на карту або браслет, не зможуть відібрати.</p>
+							</li>
+							<li>
+								<p>Ви завжди проінформовані: які продукти, у якій час та на яку суму отримала Ваша дитина.</p>
+							</li>
+							<li>
+								<p>Якщо Ви бажаєте, Ви можете замовити послугу та контролювати кількість спожитих калорій та, при необхідності, встановити індивідуальну заборону на той чи інший продукт.</p>
+							</li>
+						</ul>
+					</div>
 				</section>
 			</div>
 		</main>
