--- a/callback.html
+++ b/callback.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Дорога Здоров'я</title>
 	<meta charset="UTF-8">
-	<!--meta name="HandheldFriendly" content="True">
+	<meta name="HandheldFriendly" content="True">
 	<meta name="MobileOptimized" content="320">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
@@ -13,7 +13,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-title" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"
-	<meta http-equiv="cleartype" content="on">-->
+	<meta http-equiv="cleartype" content="on">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 	<meta name="Description" content="Описание необходимых мета-тегов." />
 	<!--meta name="msapplication-TileImage" content="assets/images/favicons/ms/144x144.png">
