--- a/private/kids.html
+++ b/private/kids.html
@@ -167,9 +167,17 @@
 						</div>
 					</div>
 					<div class="outer action-panel-holder bottom">
-						<div id="pagination-holder">
+						<div id="mobile-pagination-holder">
 							<ul>
-								<li class="active"><a href="">1</a></li>
+								<li>
+									<a href="#" class="icon hr-left-arrow"></a>
+								</li>
+								<li>
+									<span>1</span>
+								</li>
+								<li>
+									<a href="#" class="icon hr-right-arrow"></a>
+								</li>
 							</ul>
 						</div>
 					</div>
