--- a/private/kids-detailed.html
+++ b/private/kids-detailed.html
@@ -155,6 +155,22 @@
 									</div>
 								</div>
 							</article>
+							<section id="liquidpay-widget">
+								<div class="inner">
+									<h2>Форма пополнение счета</h2>
+									<form action="#" method="POST" id="liquidpay-form">
+										<div class="field-area">
+											<input type="text" name="liquidpay[money]" value="" placeholder="Введите сумму пополнения" id="liquidpay-money" data-mask="#.##0,00" data-mask-reverse="true">
+											<span class="server-error">
+												Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente minima voluptatum
+											</span>
+										</div>
+										<button type="submit">
+											<span>Пополнить</span>
+										</button>
+									</form>
+								</div>
+							</section>
 						</div>
 					</div>
 				</section>
